--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <div id="prices">Loading...</div>
 
   <script>
-    const symbols = ["BTCUSDT", "ETHUSDT", "PEPEUSDT", "DOGEUSDT", "LINKUSDT"];
+    const symbols = ["BTCUSDT", "ETHUSDT", "SUIUSDT", "DOGEUSDT", "LINKUSDT"];
 
     async function fetchPrices() {
       try {
