--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #ffffff;
+      background: transparent;
       color: #111;
       text-align: center;
       margin: 0;
